{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 414,
  "lineage": "6c24b1b3-73a6-df61-d309-0dd00bdec57a",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:security-group/sg-09015152dd0e93173",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09015152dd0e93173",
            "ingress": [],
            "name": "EKS_Cluster-Tech-Challenge",
            "name_prefix": "",
            "owner_id": "103531044887",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS_Cluster_Security_Group-Tech-Challenge"
            },
            "tags_all": {
              "Name": "EKS_Cluster_Security_Group-Tech-Challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b748b3cb254fe3f0",
            "arn": "arn:aws:ec2:us-east-1:103531044887:elastic-ip/eipalloc-0b748b3cb254fe3f0",
            "association_id": "eipassoc-0270971887265f521",
            "domain": "vpc",
            "id": "eipalloc-0b748b3cb254fe3f0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bbd85feb41688240",
            "private_dns": "ip-10-110-11-65.ec2.internal",
            "private_ip": "10.110.11.65",
            "public_dns": "ec2-54-159-186-110.compute-1.amazonaws.com",
            "public_ip": "54.159.186.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastick-IP-A-Tech-Challenge"
            },
            "tags_all": {
              "Name": "Elastick-IP-A-Tech-Challenge"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045b11fcddc547c95",
            "arn": "arn:aws:ec2:us-east-1:103531044887:elastic-ip/eipalloc-045b11fcddc547c95",
            "association_id": "eipassoc-0c630e98c926374d8",
            "domain": "vpc",
            "id": "eipalloc-045b11fcddc547c95",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e620c0c740aa071f",
            "private_dns": "ip-10-110-10-219.ec2.internal",
            "private_ip": "10.110.10.219",
            "public_dns": "ec2-34-234-186-123.compute-1.amazonaws.com",
            "public_ip": "34.234.186.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IP_Elastico_B-Tech-Challenge"
            },
            "tags_all": {
              "Name": "IP_Elastico_B-Tech-Challenge"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:internet-gateway/igw-0c69cb057b2a0c6bc",
            "id": "igw-0c69cb057b2a0c6bc",
            "owner_id": "103531044887",
            "tags": {
              "Name": "Internet-Gateway-Tech-Challenge"
            },
            "tags_all": {
              "Name": "Internet-Gateway-Tech-Challenge"
            },
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:103531044887:loadbalancer/app/Load-Balance-Tech-Challenge/8024a8cbaaaf602d",
            "arn_suffix": "app/Load-Balance-Tech-Challenge/8024a8cbaaaf602d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Load-Balance-Tech-Challenge-731701080.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:103531044887:loadbalancer/app/Load-Balance-Tech-Challenge/8024a8cbaaaf602d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Load-Balance-Tech-Challenge",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0446c0e7f0f2cc7a4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03b2fd5331aa9a203"
              },
              {
                "subnet_id": "subnet-0a0c141061d586576"
              }
            ],
            "subnets": [
              "subnet-03b2fd5331aa9a203",
              "subnet-0a0c141061d586576"
            ],
            "vpc_id": "vpc-033f228a398cde5be",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.security_group_load_balance",
            "module.network.aws_subnet.ext_sub_a_tech_challenge",
            "module.network.aws_subnet.ext_sub_b_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gtw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b748b3cb254fe3f0",
            "association_id": "eipassoc-0270971887265f521",
            "connectivity_type": "public",
            "id": "nat-0c0084c17627ccf55",
            "network_interface_id": "eni-0bbd85feb41688240",
            "private_ip": "10.110.11.65",
            "public_ip": "54.159.186.110",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a0c141061d586576",
            "tags": {
              "Name": "NAT_Gateway_a-Tech-Challenge"
            },
            "tags_all": {
              "Name": "NAT_Gateway_a-Tech-Challenge"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_eip_a",
            "module.network.aws_subnet.ext_sub_a_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gtw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045b11fcddc547c95",
            "association_id": "eipassoc-0c630e98c926374d8",
            "connectivity_type": "public",
            "id": "nat-0389381d2722eb133",
            "network_interface_id": "eni-0e620c0c740aa071f",
            "private_ip": "10.110.10.219",
            "public_ip": "34.234.186.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03b2fd5331aa9a203",
            "tags": {
              "Name": "NAT_Gateway_b-Tech-Challenge"
            },
            "tags_all": {
              "Name": "NAT_Gateway_b-Tech-Challenge"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_eip_b",
            "module.network.aws_subnet.ext_sub_b_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_default_external_sub_net_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c69cb057b2a0c6bc",
            "id": "r-rtb-0899353aee84742111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0899353aee8474211",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw_tech_challenge",
            "module.network.aws_route_table.external_route_table_a",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_default_external_sub_net_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c69cb057b2a0c6bc",
            "id": "r-rtb-075d99cffeda1d40e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-075d99cffeda1d40e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw_tech_challenge",
            "module.network.aws_route_table.external_route_table_b",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_default_internal_sub_net_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04e25dfa505e6ee501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c0084c17627ccf55",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e25dfa505e6ee50",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway_eip_a",
            "module.network.aws_nat_gateway.nat_gtw_a",
            "module.network.aws_route_table.internal_route_table_a",
            "module.network.aws_subnet.ext_sub_a_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_default_internal_sub_net_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00749b29cc077f6751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0389381d2722eb133",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00749b29cc077f675",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway_eip_b",
            "module.network.aws_nat_gateway.nat_gtw_b",
            "module.network.aws_route_table.internal_route_table_b",
            "module.network.aws_subnet.ext_sub_b_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "external_route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:route-table/rtb-0899353aee8474211",
            "id": "rtb-0899353aee8474211",
            "owner_id": "103531044887",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c69cb057b2a0c6bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "External-Route-Table-A"
            },
            "tags_all": {
              "Name": "External-Route-Table-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "external_route_table_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:route-table/rtb-075d99cffeda1d40e",
            "id": "rtb-075d99cffeda1d40e",
            "owner_id": "103531044887",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c69cb057b2a0c6bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "External-Route-Table-B"
            },
            "tags_all": {
              "Name": "External-Route-Table-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal_route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:route-table/rtb-04e25dfa505e6ee50",
            "id": "rtb-04e25dfa505e6ee50",
            "owner_id": "103531044887",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c0084c17627ccf55",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabela_Roteamento_Interna_a-Tech-Challenge"
            },
            "tags_all": {
              "Name": "Tabela_Roteamento_Interna_a-Tech-Challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal_route_table_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:route-table/rtb-00749b29cc077f675",
            "id": "rtb-00749b29cc077f675",
            "owner_id": "103531044887",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0389381d2722eb133",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabela_Roteamento_Interna_b-Tech-Challenge"
            },
            "tags_all": {
              "Name": "Tabela_Roteamento_Interna_b-Tech-Challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "external_route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fcb493d2d3fe2f6",
            "route_table_id": "rtb-0899353aee8474211",
            "subnet_id": "subnet-0a0c141061d586576"
          },
          "dependencies": [
            "module.network.aws_route_table.external_route_table_a",
            "module.network.aws_subnet.ext_sub_a_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "external_route_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056cd5c92f16aa001",
            "route_table_id": "rtb-075d99cffeda1d40e",
            "subnet_id": "subnet-03b2fd5331aa9a203"
          },
          "dependencies": [
            "module.network.aws_route_table.external_route_table_b",
            "module.network.aws_subnet.ext_sub_b_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b78f1d4697e94f47",
            "route_table_id": "rtb-04e25dfa505e6ee50",
            "subnet_id": "subnet-0d748770839b4546c"
          },
          "dependencies": [
            "module.network.aws_route_table.internal_route_table_a",
            "module.network.aws_subnet.int_sub_a_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_route_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0125ced0c03a5183f",
            "route_table_id": "rtb-00749b29cc077f675",
            "subnet_id": "subnet-07af081ce6724069b"
          },
          "dependencies": [
            "module.network.aws_route_table.internal_route_table_b",
            "module.network.aws_subnet.int_sub_b_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_load_balance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:security-group/sg-0446c0e7f0f2cc7a4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0446c0e7f0f2cc7a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Security-Group-Load-Balance-Tech-Challenge20241206142210471200000005",
            "name_prefix": "Security-Group-Load-Balance-Tech-Challenge",
            "owner_id": "103531044887",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ext_sub_a_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:subnet/subnet-0a0c141061d586576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.110.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0c141061d586576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103531044887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "External_Subnet-A-Tech-Challenge",
              "kubernetes.io/cluster/Backend-Tech-Challenge": "shared"
            },
            "tags_all": {
              "Name": "External_Subnet-A-Tech-Challenge",
              "kubernetes.io/cluster/Backend-Tech-Challenge": "shared"
            },
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ext_sub_b_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:subnet/subnet-03b2fd5331aa9a203",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.110.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b2fd5331aa9a203",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103531044887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "External_Subnet-B-Tech-Challenge",
              "kubernetes.io/cluster/Backend-Tech-Challenge": "shared"
            },
            "tags_all": {
              "Name": "External_Subnet-B-Tech-Challenge",
              "kubernetes.io/cluster/Backend-Tech-Challenge": "shared"
            },
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "int_sub_a_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:subnet/subnet-0d748770839b4546c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.110.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d748770839b4546c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103531044887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Internal-A-Tech-Challenge",
              "kubernetes.io/cluster/Backend-Tech-Challenge": "shared"
            },
            "tags_all": {
              "Name": "Subnet-Internal-A-Tech-Challenge",
              "kubernetes.io/cluster/Backend-Tech-Challenge": "shared"
            },
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "int_sub_b_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:subnet/subnet-07af081ce6724069b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.110.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07af081ce6724069b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103531044887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Internal-B-Tech-Challenge",
              "kubernetes.io/cluster/Backend-Tech-Challenge": "shared"
            },
            "tags_all": {
              "Name": "Subnet-Internal-B-Tech-Challenge",
              "kubernetes.io/cluster/Backend-Tech-Challenge": "shared"
            },
            "vpc_id": "vpc-033f228a398cde5be"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103531044887:vpc/vpc-033f228a398cde5be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/16",
            "default_network_acl_id": "acl-03071464f1404787f",
            "default_route_table_id": "rtb-03ff6c5e51b9de6a4",
            "default_security_group_id": "sg-0269e83e26eb54dd9",
            "dhcp_options_id": "dopt-0ad51802d43c6456b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033f228a398cde5be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ff6c5e51b9de6a4",
            "owner_id": "103531044887",
            "tags": {
              "Name": "VPC-Tech-Challenge"
            },
            "tags_all": {
              "Name": "VPC-Tech-Challenge"
            }
          }
        }
      ]
    }
  ]
}